# seatd

./: .clang-format  README.md  meson.build  meson_options.txt
.builds/: alpine.yml  archlinux.yml  freebsd.yml  netbsd.yml  openbsd.yml  smoketest-builtin.sh  smoketest-seatd.sh
common/: connection.c  drm.c  evdev.c  hidraw.c  linked_list.c  list.c  log.c  terminal.c  wscons.c
contrib/systemd/: seatd.service
examples/simpletest/: main.c
include/: backend.h  client.h  compiler.h  connection.h  drm.h  evdev.h  hidraw.h  libseat.h  linked_list.h  list.h  log.h  poller.h  protocol.h  seat.h  server.h  terminal.h
libseat/: libseat.c
libseat/backend/: logind.c  noop.c  seatd.c
man/: libseat-device.3.scd  libseat-dispatch.3.scd  libseat-log.3.scd  libseat-seat.3.scd  libseat-session.3.scd  libseat.3.scd  seatd-launch.1.scd  seatd.1.scd
seatd/: client.c  poller.c  seat.c  seatd.c  server.c
seatd-launch/: seatd-launch.c
seatd/poll/: basic_poller.c  poller.c
tests/: connection.c  linked_list.c  poller.c
